Fix fonts and list icons

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</section>
 			<section class="success hidden">
 				<img
-					src="/assets/images/icon-success.svg"
+					src="./assets/images/icon-success.svg"
 					class="success__icon"
 					alt="Success"
 					width="64"
